log
Thu 21 Mar 2024 03:30:17 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c:48:8: error: expected ‘;’ before ‘int’
   48 | AAAAAAA
      |        ^
      |        ;
......
   54 | int sumaLista(List *L) {
      | ~~~     
Compilation failed
653b776
Thu 21 Mar 2024 03:30:30 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0738508
Thu 21 Mar 2024 03:30:46 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
b4820b4
Thu 21 Mar 2024 01:25:34 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |       push_back(L, (void*)malloc(sizeof(int)));
      |       ^~~~~~~~~
      |       pushBack
exercises.c:49:14: error: implicit declaration of function ‘last’ [-Werror=implicit-function-declaration]
   49 |       *(int*)last(L) = i;
      |              ^~~~
exercises.c:49:8: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   49 |       *(int*)last(L) = i;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
bcccbf7
Thu 21 Mar 2024 01:28:14 PM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |      push_back(L, dato);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
27db4e8
Thu 21 Mar 2024 01:31:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |      push_back(L, dato);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
62b8512
Thu 21 Mar 2024 01:32:05 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:23: error: void value not ignored as it ought to be
   48 |      if(dato == NULL) exit(EXIT_FAILURE)
      |                       ^~~~~~~~~~~~~~~~~~
exercises.c:50:15: error: expected expression before ‘List’
   50 |      pushBack(List *L, void *dato)back(L, dato);
      |               ^~~~
exercises.c:50:6: error: too few arguments to function ‘pushBack’
   50 |      pushBack(List *L, void *dato)back(L, dato);
      |      ^~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:6: note: declared here
   20 | void pushBack(List *L, void *dato);
      |      ^~~~~~~~
In file included from test.c:5:
exercises.c:50:35: error: expected ‘;’ before ‘back’
   50 |      pushBack(List *L, void *dato)back(L, dato);
      |                                   ^~~~
      |                                   ;
Compilation failed
71365f6
Thu 21 Mar 2024 01:33:00 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |      push_back(L, dato);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
adb86b7
Thu 21 Mar 2024 01:33:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
f6211fe
Thu 21 Mar 2024 01:40:40 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 20/70
c57d47e
